# Ceos

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
benches/: bench.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: chunk.rs  lib.rs  token.rs  tokenizer.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  progress_manager.rs  range.rs
src/: event.rs  main.rs  progress_operation.rs
src/ceos/: command_manager.rs  command_state.rs  gui.rs  mod.rs  options.rs  progress_manager.rs
src/ceos/buffer/: buffer.rs  line.rs  line_group.rs  mod.rs  text_range.rs
src/ceos/command/: column.rs  filter.rs  mod.rs  save_action.rs  search.rs
src/ceos/command/buffer/: columnfilter.rs  linefilter.rs  mod.rs
src/ceos/command/direct/: goto.rs  mod.rs  zoom.rs
src/ceos/command/filter/: columnfilter.rs  linedrop.rs  linefilter.rs  mod.rs  search.rs
src/ceos/gui/: command.rs  frame_history.rs  helppanel.rs  mod.rs  options_dialog.rs  search_result_panel.rs  search_toolbar.rs  search_widget.rs  searchpanel.rs  tools.rs
src/ceos/gui/action/: action_context.rs  keyboard_handler.rs  mod.rs
src/ceos/gui/highlight/: highlightlist_panel.rs  mod.rs
src/ceos/gui/textarea/: mod.rs  textareaproperties.rs
src/ceos/model/: highlight.rs  mod.rs
src/ceos/syntax/: chunk.rs  mod.rs  token.rs  token_type.rs  tokenizer.rs
src/ceos/textarea/: textareaproperties.rs
src/ceos/tools/: misc_tool.rs  mod.rs  range.rs  text_tool.rs
src/syntax/: chunk.rs  mod.rs  token_type.rs  tokenizer.rs
src/textarea/: buffer_properties.rs  mod.rs  textarea.rs  textareaproperties.rs
src/textarea/buffer/: line.rs  line_status.rs  mod.rs
src/textarea/renderer/: mod.rs  text_renderer.rs
(+25 files in other folders)
