[package]
name = "ceos"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "crates/syntax" }
tools = { path = "crates/tools", features = ["simd"] }
anyhow = { workspace = true }
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = "0.31.0"
env_logger = "0.11.6"
humansize = "2.1.3"
log = { workspace = true }
rayon = { version = "1.10.0", optional = true }
rfd = "0.15.2"
rstest = { workspace = true }
uuid = { version = "1.12.1", features = ["v4"] }

[features]
default = []
parallel = ["rayon"]
simd = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
memchr = "2.7.4"

[[bench]]
name = "bench"
harness = false

[workspace]
members = [
    "crates/syntax", "crates/tools"
]

[workspace.dependencies]
log = "0.4.25"
rstest = "0.24.0"
anyhow = "1.0.95"