[package]
name = "ceos"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"
egui_solarized = "0.33"
env_logger = "0.11"
flate2 = "1.1.9"
humansize = "2.1.3"
log = "0.4"
logos = "0.16.1"
lz4 = "1.28.1"
rayon = "1.11.0"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
rstest = "0.26.1"